# meteorite

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.config/: nextest.toml
.pi/: prompt-history.jsonl
crates/met-cache/: Cargo.toml
crates/met-cache/src/: cache.rs  entry.rs  eviction.rs  lib.rs  predictor.rs  statistics.rs
crates/met-command-palette/: Cargo.toml
crates/met-command-palette/src/: fuzzy.rs  lib.rs  palette.rs
crates/met-core/: Cargo.toml
crates/met-core/assets/: meteorite.css
crates/met-core/src/: lib.rs  size.rs  theme.rs  variant.rs
crates/met-core/tests/: theme_tests.rs
crates/met-datepicker/: Cargo.toml
crates/met-datepicker/src/: calendar.rs  datepicker.rs  lib.rs  time_input.rs
crates/met-docking/: Cargo.toml
crates/met-docking/src/: drag_drop.rs  layout.rs  lib.rs  panels.rs  position.rs  presets.rs  zones.rs
crates/met-docking/src/flexible_layout/: builder.rs  constraints.rs  integration.rs  migration.rs  mod.rs  node.rs  operations.rs  presets.rs  renderer.rs  tree.rs
crates/met-docking/tests/: operations.rs  presets.rs  renderer.rs  tree_operations.rs
crates/met-hooks/: Cargo.toml
crates/met-hooks/src/: lib.rs  use_debounce.rs  use_local_storage.rs  use_toggle.rs
crates/met-layout/: Cargo.toml
crates/met-layout/src/: container.rs  grid.rs  lib.rs  sidebar.rs  split.rs  stack.rs
crates/met-leaderkey/: Cargo.toml
crates/met-leaderkey/src/: lib.rs  overlay.rs
crates/met-markdown/: Cargo.toml
crates/met-markdown/src/: lib.rs  parse.rs  render.rs
crates/met-overlay/: Cargo.toml
crates/met-overlay/src/: context_menu.rs  dialog.rs  lib.rs  modal.rs  popover.rs  shortcuts.rs  toast.rs  tooltip.rs
crates/met-table/: Cargo.toml
crates/met-table/src/: column.rs  lib.rs  table.rs
crates/met-tree/: Cargo.toml
crates/met-tree/src/: lib.rs  model.rs  tree.rs
crates/met-widgets/: Cargo.toml
crates/met-widgets/src/: accordion.rs  alert.rs  badge.rs  button.rs  card.rs  checkbox.rs  divider.rs  form.rs  form_field.rs  icon.rs  input.rs  lib.rs  loader.rs  progress.rs  radio.rs  searchable_select.rs  select.rs  slider.rs  spinner.rs  status_badge.rs  switch.rs  tabs.rs  textarea.rs
crates/meteorite/: Cargo.toml
crates/meteorite/src/: lib.rs
crates/showcase/: Cargo.toml  Dioxus.toml
crates/showcase/src/: main.rs
openspec/changes/extract-shared-crate/: design.md  proposal.md  tasks.md
openspec/changes/extract-shared-crate/specs/shared-logic/: spec.md
