[workspace]
resolver = "2"
members = [
    "crates/meteorite",
    "crates/met-core",
    "crates/met-widgets",
    "crates/met-layout",
    "crates/met-hooks",
    "crates/met-table",
    "crates/met-overlay",
    "crates/met-tree",
    "crates/met-command-palette",
    "crates/met-datepicker",
    "crates/met-markdown",
    "crates/met-docking",
    "crates/met-cache",
    "crates/met-leaderkey",
    "crates/showcase",
]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.metadata.crane]
name = "meteorite"

[workspace.dependencies]
dioxus = "0.7.3"
dioxus-primitives = { git = "https://github.com/DioxusLabs/components.git" }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
web-time = "1.1"

# internal crates
met-core = { path = "crates/met-core" }
met-widgets = { path = "crates/met-widgets" }
met-layout = { path = "crates/met-layout" }
met-hooks = { path = "crates/met-hooks" }
met-table = { path = "crates/met-table" }
met-overlay = { path = "crates/met-overlay" }
met-tree = { path = "crates/met-tree" }
met-command-palette = { path = "crates/met-command-palette" }
met-datepicker = { path = "crates/met-datepicker" }
met-markdown = { path = "crates/met-markdown" }
met-docking = { path = "crates/met-docking" }
met-cache = { path = "crates/met-cache" }
met-leaderkey = { path = "crates/met-leaderkey" }
ratcore = { path = "../ratcore" }
