[package]
name = "met-docking"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Framework-agnostic panel tiling and docking engine"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { version = "1.5", features = ["v4", "js"] }
web-time = { workspace = true }
