[package]
name = "met-hooks"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Custom Dioxus hooks: debounce, throttle, breakpoint, clipboard, local storage"

[dependencies]
dioxus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
