[package]
name = "met-tree"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Tree view component for Dioxus with expand/collapse, keyboard nav, and guide lines"

[dependencies]
dioxus = { workspace = true }
met-core = { workspace = true }
ratcore = { workspace = true }
