[package]
name = "met-widgets"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "UI components for Dioxus: button, input, checkbox, select, slider, badge"

[dependencies]
dioxus = { workspace = true }
dioxus-primitives = { workspace = true }
met-core = { workspace = true }

[features]
default = []
web = ["dioxus-primitives/web"]
