[package]
name = "showcase"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Demo app showcasing meteorite components"

[dependencies]
dioxus = { workspace = true, features = ["web"] }
dioxus-primitives = { workspace = true, features = ["web"] }
met-core = { workspace = true }
met-widgets = { workspace = true }
met-layout = { workspace = true }
met-hooks = { workspace = true }
met-table = { workspace = true }
met-overlay = { workspace = true }
